syntax = 'proto3';

package initial;

message Packet {
    string deviceId = 1;
}