syntax = 'proto3';

package initialResponse;

message Packet {
    string userId = 1;
    float x = 2;
    float y = 3;
}